propertee-core/src/test/resources/tests/99_fail.expected
value: fine
before fail
Runtime error: Runtime Error at line 4:8: check failed: boom
